Добавил модель и класс для работы с ней

--- a/Narfu.IceSegmentation/Dockerfile
+++ b/Narfu.IceSegmentation/Dockerfile
@@ -3,6 +3,8 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+RUN apt-get update && apt-get install -y libgomp1
+
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY ["Narfu.IceSegmentation/Narfu.IceSegmentation.csproj", "Narfu.IceSegmentation/"]
