--- a/Narfu.IceSegmentation/Narfu.IceSegmentation.csproj
+++ b/Narfu.IceSegmentation/Narfu.IceSegmentation.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.16.3" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
@@ -17,6 +19,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Narfu.IceSegmentation.ModelLoader\Narfu.IceSegmentation.ModelLoader.csproj" />
     </ItemGroup>
 
 </Project>
